[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "mazegen"
version = "1.0.0"
readme="README.md"
description = "Reusable maze generator"
requires-python = ">=3.10"
dependencies = [
    "readchar",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["mazegen*"]